--- a/src/styles.css
+++ b/src/styles.css
@@ -45,7 +45,7 @@ body {
     width: 100%;
     background-image: transparent;
     border: none;
-    color: #000;
+    color: #fff;
     text-align: center;
 }
 
@@ -137,9 +137,10 @@ body {
     padding: 0.5rem;
     margin-top: -10px;
     border-radius: 0 0 10px 10px;
-    /* background-color: #B9C0DA; */
-    background-color: #414066;
-    /* background-image: linear-gradient( rgba(0, 0, 0, 0.443),  transparent); */
+    background-color: #60B2E5;
+    /* background-color: #414066; */
+
+    background-image: linear-gradient( rgba(0, 0, 0, 0.443),  transparent);
     color: #fff;
     /* border: 3px solid #000; */
 
@@ -211,7 +212,7 @@ input {
 
 input[type="text"] {
     border: none;
-    border-bottom: 1px solid #000;
+    /* border-bottom: 1px solid #000; */
     height: 100%;
     color:#000;
 }
@@ -325,7 +326,7 @@ input[type="date"] {
   .checkbox-container input:checked ~ .checkmark {
     background-color: #60B2E5;
   }
-  
+
   /* Create the checkmark/indicator (hidden when not checked) */
   .checkmark:after {
     content: "";
@@ -350,4 +351,22 @@ input[type="date"] {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+  }
+
+  .info {
+    text-align: center;
+    /* margin-top: 5rem; */
+    color: #60B2E5;
+  }
+
+  .logo {
+    color: #60B2E5;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3rem;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 3rem;
   }
